[package]
edition = "2018"
name = "admin-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.18"
solana-sdk = "1.8"

anyhow = "1.0"
rand = "0.7"
shellexpand = "2.1"
structopt = "0.3"
csv = "1.1"

country-list = {path = "../../programs/country-list", features = ["no-entrypoint"]}
locker = {path = "../../programs/locker", features = ["no-entrypoint"]}
